--- a/index.html
+++ b/index.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
+	<title>Pierre Yapici's profile</title>
+	<meta name="description" content="Welcome on my profile !">
 	<meta charset="utf-8">
-	<title>SoundCloud</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/517c20d7c7.js" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@100;500;700;900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<div id="img">
-		<div id="logo"> <p> SoundCloud </p> </div>
-
-		<div id="text">
-			<div id="text">
-				<h1>Ecoutez non-stop<br>Explorez les playlists.</h1>
-				<br>
-				<div id="line">
-					<p>Ecoutez gratuitement les dernières<br>tendances de la communauté Soudcloud<br>une expansion de mix constant de la <br>musique des meilleurs artistes du monde<br></p>
-					<br>
-				
-					<button id="sub1">Créer un compte</button>
-					<button id="sub2">Se connecter</button>
-				</div>
-
-		</div>
-			
-
-
-		</div>
-	<div id="white">
-		<div id="orange"></div>
-		<h4>Passer la première étape</h4>
-		<p>Ecoutez ce qui se passe gratuitement <br> grâce à la communité Soundclound </p>
-		<button id="sub">Télécharger votre musique</button>
-		<div id="button">
-			<input type="text" placeholder="Rechercher un Titre, Artiste, ou Podcast" id="search">
-
-</div>
-
+	<div class="container">
+	<div class="card-white" id="introduction">
+		<h1>Hi everyone ! I'm Pierre👨‍🎓</h1>
+		<img src="images/pierre.jpg" class="img-circle" width="100px"> 
+		<p>
+			I'm 25 yo and I'm passionate about videomaking 🎬, digital marketing 💻 and photography 📷. Nice to meet you 👋🏼
+		</p>
+		<a href="https://www.linkedin.com/in/pierre-yapici/" class="btn-blue" target="_blank">Take a closer look at my CV</a>
+	</div>
+	<div class="card-white">
+		<h2>Videomaker 🎬</h2>
+		<p>I like to film with a drone</p>
+	</div>
+	<div class="card-white">
+		<h2>Digital Marketing 💻 </h2>
+		<p>Graduated from the Inseec Business School in Lyon</p>
+	</div>
+	<div class="card-white">
+		<h2>Photography 📷</h2>
+		<p>I like to take pictures and I wish one day I will buy a Sony Apha 7 III.</p>
+	</div>
+	<div class="card-white">
+		<h2>Follow me</h2>
+		<ul class="list-inline">
+			<li>
+				<a href="https://www.facebook.com/pierre-yapici./"><i class="fab fa-facebook-square"></i></a>
+			</li>
+			<li>
+				<a href="#"><i class="fab fa-twitter-square"></i></a>
+			</li>
+			<li>
+				<a href="#"><i class="fab fa-instagram-square"></i></a>	
+			</li>
+		</ul>
+	</div>
 	</div>
 
 </body>
+
 </html>
